# lib/db/src/schema/index.ts
@@ -1,6 +1,7 @@
 export * from "./audit";
 export * from "./enums";
 export * from "./ledger";
+export * from "./operations";
 export * from "./parties";
 export * from "./reconciliation";
 export * from "./remittance";
